Archive2/f4/056f90c0dafb3d/output
+ g++ -std=c++1y -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:5:18: error: use of deleted function 'A::A()'
     A* a = new A();
                  ^
main.cpp:1:8: note: 'A::A()' is implicitly deleted because the default definition would be ill-formed:
 struct A {
        ^
main.cpp:1:8: error: uninitialized const member in 'struct A'
main.cpp:2:15: note: 'const int A::j' should be initialized
     const int j;
               ^
main.cpp:5:8: warning: unused variable 'a' [-Wunused-variable]
     A* a = new A();
        ^
+ clang++ -stdlib=libc++ -std=c++1y -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:5:16: error: call to implicitly-deleted default constructor of 'A'
    A* a = new A();
               ^
main.cpp:2:15: note: default constructor of 'A' is implicitly deleted because field 'j' of const-qualified type 'const int' would not be initialized
    const int j;
              ^
1 error generated.
